# hardwareInterface_wrapers

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  hardware_interface_wrappers_ros2_control_plugins.xml  package.xml
config/: controller_configuration.yaml  controller_test_configuration_1.yaml  controller_test_configuration_2.yaml  initial_positions.yaml
include/hardware_interface_wrappers/: transmission_wrapper.hpp  visibility_control.h
launch/: bring_up_on_hardware.launch.py  hardware_interface_and_fake_robee.launch.py  testable_interface_robot1.test.launch.py  testable_interface_robot2.test.launch.py  transmission_wrapper.test.launch.py  transmission_wrapper_robot1.test.launch.py  transmission_wrapper_robot2.test.launch.py
src/: transmission_wrapper.cpp
test/: test_robee_hardware_interface.py  test_testable_joint_system_interface.cpp  test_testable_joint_system_robot1.py  test_testable_joint_system_robot2.py  test_transmission_wrapper.cpp  test_transmission_wrapper_robot1.py  test_transmission_wrapper_robot2.py  testable_joint_system_interface.cpp  transmission_wrapper_loader_test.cpp  transmission_wrapper_test.cpp
urdf/: robee.ros2_control.xacro  robee.urdf.xacro  robot.urdf.xacro  robot1.urdf.xacro  robot1_no_transmissions.urdf.xacro  robot2.urdf.xacro  robot2_no_transmissions.urdf.xacro
