<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_interface_wrappers</name>
  <version>1.0.0</version>
  <description>hardware_interface_wrappers contains ros2 hardware interface implmataion for wrapping other implmented interface.</description>
  <maintainer email="yoav@robeecontech.com">Yoav Fekete</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>transmission_manager</depend>  
  <depend>transmission_interface</depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
